# auram

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md
backend/: Dockerfile  check_turns.py  pyproject.toml
backend/app/: main.py
backend/app/agents/host_agent/: agent.py  loader.py  prompts.py  state.py
backend/app/api/routes/: documents.py  podcasts.py  sessions.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  document.py  enums.py  podcast.py  schemas.py  session.py
backend/app/services/ingestion/: chunker.py  cleaners.py  embedder.py  service.py
backend/app/services/ingestion/extractors/: __init__.py  pdf.py  text.py  url.py
backend/app/services/rag/: query.py  vectorstore.py
backend/app/services/script_generator/: models.py  prompts.py  service.py  validator.py  voices.py
backend/app/services/session/: livekit_ops.py  manager.py  vapi_ops.py
backend/app/services/tts/: cache.py  factory.py  pipeline.py
backend/app/services/tts/providers/: base.py  openai.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_ingestion.py  test_script_validator.py  test_session_state.py  test_tts_cache.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AudioPlayer.tsx  DocumentCard.tsx  PodcastCard.tsx  StatusBadge.tsx  UploadZone.tsx
frontend/src/hooks/: useDocuments.ts  (+5 more)
(+13 files in other folders)
