[project]
name = "auram-backend"
version = "0.1.0"
description = "Auram - conversational podcast backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "redis>=5.0",
    "celery>=5.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "openai>=1.30",
    "qdrant-client>=1.9",
    "livekit>=0.17",
    "livekit-api>=0.7",
    "livekit-agents>=0.11",
    "livekit-plugins-openai>=0.10",
    "llama-index-core>=0.10",
    "trafilatura>=1.6",
    "pymupdf>=1.23",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
